# Autonomous-Navigation-Simulation

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  package.xml
config/: bridge.yaml  gazebo_gui.config  gazebo_gui_half_roundabout.config  gazebo_gui_turn_navigation.config  nav2_params.yaml  turn_nav.rviz
launch/: half_roundabout_launcher.py  straight_corridor_launcher.py  turn_navigation_launcher.py
src/: half_roundabout_navigation.cpp  navigation.cpp  turn_navigation.cpp
urdf/: robot.urdf.xacro
worlds/: half_roundabout.sdf  straight_corridor.sdf  turn_navigation.sdf
